complete orders table

--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -31,7 +31,7 @@
                 <template class="header">Size (ETH)</template>
                 <template>[[item.fillAmountB]]</template>
             </vaadin-grid-column>
-            <vaadin-grid-column  width="200px">
+            <vaadin-grid-column >
                 <template class="header">Hash</template>
                 <template>[[item.txHash]]</template>
             </vaadin-grid-column>
