--- a/src/page-rings.html
+++ b/src/page-rings.html
@@ -25,9 +25,36 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <looper-toolbar slot="secondary-toolbar" active-tab="rings"></looper-toolbar>
       <div class="sections">
         <paper-card>
-          <div class="card-content">
-            <a href="#/ring">Link to a Ring</a>
-          </div>
+            <iron-ajax auto url="//raw.githubusercontent.com/Loopring/mock-relay-data/master/ringMined.json" handle-as="json"
+                       last-response="{{resp}}"></iron-ajax>
+            <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
+                <vaadin-grid-column width="50px">
+                    <template class="header">Hash</template>
+                    <template>[[item.ringhash]]</template>
+                </vaadin-grid-column>
+                <vaadin-grid-column width="50px">
+                    <template class="header">Miner</template>
+                    <template>[[item.miner]]</template>
+                </vaadin-grid-column>
+                <vaadin-grid-column width="50px">
+                    <template class="header">Fee Recepient</template>
+                    <template>[[item.feeRecepient]]</template>
+                </vaadin-grid-column>
+                <vaadin-grid-column width="50px">
+                    <template class="header">Transaction Hash</template>
+                    <template>[[item.transactionHash]]</template>
+                </vaadin-grid-column>
+                <vaadin-grid-column width="50px">
+                    <template class="header">Block Num</template>
+                    <template>[[item.blockNum]]</template>
+                </vaadin-grid-column>
+                <vaadin-grid-column width="20px">
+                    <template class="header">Detail</template>
+                    <template>
+                        <iron-icon icon="menu"></iron-icon>
+                    </template>
+                </vaadin-grid-column>
+            </vaadin-grid>
         </paper-card>
       </div>
       <looper-footer></looper-footer>
