--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -33,14 +33,9 @@
             </vaadin-grid-column>
             <vaadin-grid-column >
                 <template class="header">Hash</template>
-                <template>[[item.txHash]]</template>
+                <template><a href="#/fill">[[item.txHash]]</a></template>
             </vaadin-grid-column>
-            <vaadin-grid-column width="20px">
-                <template class="header">Status</template>
-                <template>
-                    <iron-icon icon="menu"></iron-icon>
-                </template>
-            </vaadin-grid-column>
+
         </vaadin-grid>
     </template>
     <script>
