add pretty-number and long-hash (#22)

--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -33,7 +33,7 @@
             </vaadin-grid-column>
             <vaadin-grid-column >
                 <template class="header">Hash</template>
-                <template><a href="#/fill">[[item.txHash]]</a></template>
+                <template><a href="#/fill"><long-hash hash="[[item.txHash]]"></long-hash></a></template>
             </vaadin-grid-column>
 
         </vaadin-grid>
