--- a/src/my-app.html
+++ b/src/my-app.html
@@ -71,6 +71,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="looper-page/looper-page.html">
 <link rel="import" href="looper-page/ethereum-signer.html">
 <link rel="import" href="looper-page/signtosend-dialog.html">
+<link rel="import" href="looper-page/signtosend-dialog.html">
+<link rel="import" href="utils/pretty-number.html">
+<link rel="import" href="utils/long-hash.html">
 <link rel="lazy-import" href="page-markets.html">
 <link rel="lazy-import" href="page-market.html">
 <link rel="lazy-import" href="page-rings.html">
@@ -96,6 +99,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       --app-secondary-color: black;
       --paper-spinner-color: var(--google-blue-500);
       --paper-spinner-stroke-width: 1px;
+      --app-red-color: var(--paper-red-500);
+      --app-green-color: var(--paper-green-500);
       display: block;
     }
 
