--- a/src/page-settings.html
+++ b/src/page-settings.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     app-toolbar {
       color: white;
-      background-color: var(--google-grey-700);
+      background-color: var(--paper-amber-700);
     }
 
     paper-icon-button {
