--- a/src/wallet/subpage-ready.html
+++ b/src/wallet/subpage-ready.html
@@ -85,7 +85,7 @@
           <vaadin-grid-column width="100px">
             <template class="header">Operations</template>
             <template>
-              <div class="horizontal layout">
+              <div class="horizontal end-justified layout">
                 <div><a href="#/transfer/[[_toLowerSymbol(item.contract)]]">transfer</a></div>
                 <div style="margin-left: 10px;"><a href="#/convert">convert</a></div>
               </div>
@@ -122,7 +122,7 @@
           <vaadin-grid-column width="100px">
             <template class="header">Operations</template>
             <template>
-              <div class="horizontal layout">
+              <div class="horizontal end-justified layout">
                 <div><a href="#/transfer/[[_toLowerSymbol(item.contract)]]">transfer</a></div>
                 <div style="margin-left: 10px;"><a href="#/market/[[_toLowerSymbol(item.contract)]]">trade</a></div>
                 <div class="horizontal layout" style="margin-left: 10px;">
